# ARGUS

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: deploy-doxygen.yml
config/: servo_calibration_latest.txt
docs/: compliance_matrix.md  doxygen-mainpage.md  index.html
docs/adr/: 001-compliance-strategy.md
docs/architecture/: Circuit Voltage Analysis.xlsx
docs/doxygen/html/: AppController_8cpp.html  AppController_8cpp_source.html  AppController_8hpp.html  AppController_8hpp_source.html  CameraCapture_8cpp.html  CameraCapture_8cpp_source.html  CameraCapture_8hpp.html  CameraCapture_8hpp_source.html  GuardianStateMachine_8cpp.html  GuardianStateMachine_8cpp_source.html  GuardianStateMachine_8hpp.html  GuardianStateMachine_8hpp_source.html  MetricsLogger_8cpp.html  MetricsLogger_8cpp_source.html  MetricsLogger_8hpp.html  MetricsLogger_8hpp_source.html  MotionController_8cpp.html  MotionController_8cpp_source.html  MotionController_8hpp.html  MotionController_8hpp_source.html  PhysicalButtonModule_8cpp.html  PhysicalButtonModule_8cpp_source.html  PhysicalButtonModule_8hpp.html  PhysicalButtonModule_8hpp_source.html  RobotInterlock_8cpp.html  RobotInterlock_8cpp_source.html  RobotInterlock_8hpp.html  RobotInterlock_8hpp_source.html  Types_8hpp.html  Types_8hpp_source.html  VisionConfig_8hpp.html  VisionConfig_8hpp_source.html  VisionProcessor_8cpp.html  VisionProcessor_8cpp_source.html  VisionProcessor_8hpp.html  VisionProcessor_8hpp_source.html  annotated.html  classAppController-members.html  classAppController.html  classCameraCapture-members.html  (+59 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  (+60 more)
docs/wiki_additions/: 01-Setup-and-Build-Pi.md  02-Hardware-Wiring-and-Power.md  03-Run-Modes-and-Controls.md  04-Latency-and-Validation.md  05-Troubleshooting.md  README.md  Wiki-Home-Additions.md
include/: AppController.hpp  CameraCapture.hpp  GuardianStateMachine.hpp  MetricsLogger.hpp  MotionController.hpp  PhysicalButtonModule.hpp  RealtimeTimer.hpp  RobotInterlock.hpp  Types.hpp  VisionConfig.hpp  VisionProcessor.hpp
scripts/: camera_backend_check.sh  full_demo.sh  live_test.sh  servo_calibrate.sh  servo_console.sh  servo_drive.sh  set_home.sh  smoke_all.sh  smoke_base.sh  smoke_grip.sh  smoke_lower.sh  smoke_upper.sh  test_button.sh
src/: AppController.cpp  CameraCapture.cpp  GuardianStateMachine.cpp  MetricsLogger.cpp  MotionController.cpp  PhysicalButtonModule.cpp  RealtimeTimer.cpp  RobotInterlock.cpp  VisionProcessor.cpp  main.cpp
tests/: CMakeLists.txt  test_fsm.cpp  test_interlock.cpp  test_vision.cpp
